Add icons to features

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,14 +1,14 @@
  <div class="place-photo-wrapper" style= "background-image:linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path @place.photo, width: 1500, height: 400, crop: :fill %>')">
    <div class="banner-content">
     <h1><%= @place.name %></h1>
-      <p>
-        <% @place.rating.times do %>
-        <i class="fa fa-star active-star"></i>
-        <% end %>
-        <% (5 - @place.rating).times do %>
-        <i class="fa fa-star inactive-star"></i>
-        <% end %>
-      </p>
+    <p>
+      <% @place.rating.times do %>
+      <i class="fa fa-star active-star"></i>
+      <% end %>
+      <% (5 - @place.rating).times do %>
+      <i class="fa fa-star inactive-star"></i>
+      <% end %>
+    </p>
     <div>
       <% if user_signed_in? %>
       <%= link_to "Book", place_reservations_path(@place), method: :post, class: "btn btn-transparent btn-lg" %>
@@ -19,77 +19,74 @@
     </div>
   </div>
 </div>
+
+
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-4">
+    <div class="col-xs-12 col-md-8">
       <h3>User</h3>
       <%= link_to @place.user.first_name, user_path(@place.user) %>
 
       <h3>Description</h3>
       <%= @place.description %>
 
-      <h3>Address</h3>
-      <%= @place.address %>
-
       <h3>Features</h3>
       <ul>
-        <li>UV: <%= @place.UV %></li>
-        <li>Startlight: <%= @place.startlight %></li>
-        <li>Satellite: <%= @place.satellite %></li>
-        <li>Wifi: <%= @place.wifi %></li>
-        <li>Earth mailing: <%= @place.earth_mailing %></li>
-        <li>Astronaut outfit: <%= @place.astronaut_outfit %></li>
-        <li>Crater: <%= @place.crater %></li>
-        <li>Freezing: <%= @place.freezing %></li>
-        <li>Alien: <%= @place.alien %></li>
-        <li>Detox: <%= @place.detox %></li>
+        <li><i class="fa fa-sun-o"></i> UV: <%= @place.UV %></li>
+        <li><i class="fa fa-star-o"></i> Shooting star: <%= @place.startlight %></li>
+        <li><i class="fa fa-globe"></i> Satellite: <%= @place.satellite %></li>
+        <li><i class="fa fa-wifi"></i> Wifi: <%= @place.wifi %></li>
+        <li><i class="fa fa-envelope-o"></i> Earth mailing: <%= @place.earth_mailing %></li>
+        <li><i class="fa fa-user-circle-o"></i> Astronaut outfit: <%= @place.astronaut_outfit %></li>
+        <li><i class="fa fa-cicrcle"></i> Craters: <%= @place.crater %></li>
+        <li><i class="fa fa-thermometer-empty"></i> Deep freezing: <%= @place.freezing %></li>
+        <li><i class="fa fa-reddit-alien"></i> Alien: <%= @place.alien %></li>
+        <li><i class="fa fa-smile-o"></i> Detox: <%= @place.detox %></li>
       </ul>
+
+      <h3>Address</h3>
+      <%= @place.address %>
 
 
       <h3>Price </h3>
       <%= @place.price %> $
     </div>
 
-    <div class="col-xs-12 col-md-8">
+    <div class="col-xs-12 col-md-4">
      <h3>Galaxy location</h3>
      <div style="background-image: url('<%= image_path 'space_map.jpg' %>')" class="space-map">
        <i class="fa fa-map-marker"></i>
      </div>
+
+     <h2>Reviews: </h2>
+     <% @place.reviews.each do |review| %>
+     <% review.rating.times do %>
+     <i class="fa fa-star active-star"></i>
+     <% end %>
+     <% (5 - review.rating).times do %>
+     <i class="fa fa-star inactive-star"></i>
+     <% end %>
+     <p><%= review.content %></p>
+     <% end %>
+
+     <% if current_user.reservations.any? { |reservation| reservation.place == @place && reservation.status == "accepted" } %>
+     <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <h2>Add your review</h2>
+        <%= simple_form_for([@place, @review]) do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :rating, collection: Review::RATING, as: :radio_buttons, item_wrapper_class: 'radio-inline' %>
+        <%= f.input :content, as: :text, input_html: {rows: 5, cols: 10} %>
+        <%= f.submit  %>
+        <% end %>
+      </div>
+    </div>
+
+    <% end %>
+
+
    </div>
  </div>
-
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <h2>Reviews: </h2>
-
-        <% @place.reviews.each do |review| %>
-          <% review.rating.times do %>
-          <i class="fa fa-star active-star"></i>
-          <% end %>
-          <% (5 - review.rating).times do %>
-          <i class="fa fa-star inactive-star"></i>
-          <% end %>
-          <p><%= review.content %></p>
-        <% end %>
-  </div>
-</div>
-
-<% if current_user.reservations.any? { |reservation| reservation.place == @place && reservation.status == "accepted" } %>
-<div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <h2>Add your review</h2>
-      <%= simple_form_for([@place, @review]) do |f| %>
-      <%= f.error_notification %>
-      <%= f.input :rating, collection: Review::RATING, as: :radio_buttons, item_wrapper_class: 'radio-inline' %>
-      <%= f.input :content, as: :text, input_html: {rows: 5, cols: 10} %>
-      <%= f.submit  %>
-      <% end %>
-    </div>
-  </div>
-
-<% end %>
-
 
 
 <div class="padded text-center" >
