User page layouting

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="user-details">
         <h2>Bio</h2>
-        <p>Some random bio about me and how I am so great and amazing.</p>
+        <p><%= @user.bio %></p>
         <h2>Email</h2>
         <p><%= @user.email %></p>
 
