--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -11,11 +11,14 @@
     </p>
     <div>
       <% if user_signed_in? %>
-      <%= link_to "Book", place_reservations_path(@place), method: :post, class: "btn btn-transparent btn-lg" %>
+        <%= link_to place_reservations_path(@place), method: :post, class: "btn btn-transparent btn-lg" do %>
+          Book for €<%= @place.price %>
+        <% end %>
       <% else %>
-      <%= link_to "Book", new_user_session_path, class: "btn btn-transparent btn-lg" %>
+        <%= link_to new_user_session_path, class: "btn btn-transparent btn-lg" do %>
+          Book for €<%= @place.price %>
+        <% end %>
       <% end %>
-
     </div>
   </div>
 </div>
@@ -23,9 +26,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-8">
-      <h3>User</h3>
-      <%= link_to @place.user.first_name, user_path(@place.user) %>
+    <div class="col-xs-12 col-md-6">
 
       <h3>Description</h3>
       <%= @place.description %>
@@ -35,7 +36,7 @@
         <div class="col-xs-6">
           <ul class="fa-ul">
             <li <%= "class=unsupported" if @place.UV == false %>>
-            <i class="fa-li fa fa-sun-o"></i>UV
+              <i class="fa-li fa fa-sun-o"></i>UV
             </li>
             <li <%= "class=unsupported" if @place.startlight == false %>>
               <i class="fa-li fa fa-star-o"></i><span> Shooting stars</span>
@@ -72,22 +73,26 @@
         </div>
       </div>
 
-
-      <h3>Address</h3>
+      <h3>Galaxy location</h3>
       <%= @place.address %>
-
-
-      <h3>Price </h3>
-      <%= @place.price %> $
-    </div>
-
-    <div class="col-xs-12 col-md-4">
-     <h3>Galaxy location</h3>
-     <div style="background-image: url('<%= image_path 'space_map.jpg' %>')" class="space-map">
+      <div style="background-image: url('<%= image_path 'space_map.jpg' %>')" class="space-map">
        <i class="fa fa-map-marker"></i>
      </div>
 
-     <h2>Reviews: </h2>
+   </div>
+
+   <div class="col-xs-12 col-md-6">
+
+    <div class="user-info">
+      <% user_avatar_url = @place.user.facebook_picture_url || @place.user.photo %>
+
+      <%= image_tag user_avatar_url, crop: :fill, class: "avatar-large" %>
+      <h2><%= link_to @place.user.first_name, user_path(@place.user) %></h2>
+      <p><%= @place.user.bio %></p>
+    </div>
+
+    <div class="user-details">
+     <h2>Place reviews</h2>
      <% @place.reviews.each do |review| %>
      <% review.rating.times do %>
      <i class="fa fa-star active-star"></i>
@@ -99,8 +104,7 @@
      <% end %>
 
      <% if current_user.reservations.any? { |reservation| reservation.place == @place && reservation.status == "accepted" } %>
-     <div class="row">
-      <div class="col-xs-12 col-sm-4">
+
         <h2>Add your review</h2>
         <%= simple_form_for([@place, @review]) do |f| %>
         <%= f.error_notification %>
@@ -108,13 +112,10 @@
         <%= f.input :content, as: :text, input_html: {rows: 5, cols: 10} %>
         <%= f.submit  %>
         <% end %>
-      </div>
-    </div>
-
     <% end %>
 
-
   </div>
+</div>
 </div>
 
 
