--- a/app/assets/stylesheets/components/_space-map.scss
+++ b/app/assets/stylesheets/components/_space-map.scss
@@ -1,12 +1,4 @@
-.space-map {
-  display: flex;
-  width: 100%;
-  height: 300px;
+#map_canvas {
   margin-top: 40px;
-  color: #cc2020;
-  font-size: 30px;
-  background-size: cover;
-  align-items: center;
-  justify-content: space-around;
 }
 
