--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -75,9 +75,8 @@
 
       <h3>Galaxy location</h3>
       <%= @place.address %>
-      <div style="background-image: url('<%= image_path 'space_map.jpg' %>')" class="space-map">
-       <i class="fa fa-map-marker"></i>
-     </div>
+
+     <div id="map_canvas" style="width: 100%; height: 300px;">map div</div>
 
    </div>
 
