Add title margin in home

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -24,7 +24,7 @@
 
 <div class="wrapper">
   <div class="container">
-    <h1>Places near you</h1>
+    <h1 id="list-title">Places near you</h1>
     <div class="row", id="place-list">
       <%= render "list" %>
     </div>
