--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -32,5 +32,5 @@
 </div>
 
 <div class='button-wrapper'>
-<%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
+<%= link_to 'Add new place', new_place_path(@place), class: "btn btn-lg" %>
 </div>
