Fix hero background and google sky, add search to navbar

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<div id="particles-js">
+<div id="particles-js" style="background-image: url('<%= image_path 'space-hero.jpg' %>')">
 </div>
 <div class="hero-wrapper">
   <div class="container">
