--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render "shared/navbar" %>
     <%= yield %>
     <%= render "shared/footer" %>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyB_VaqTzefQSGN_OuOLWSWJh-AgHIJCCBM"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyB_VaqTzefQSGN_OuOLWSWJh-AgHIJCCBM"></script>
     <%= javascript_include_tag 'application' %>
     <%= yield(:after_js) %>
   </body>
